--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
-    "name": "emizentech/categorywidget",
+    "name": "boban-dj/categorywidget",
     "description": "Emizentech Category List Widget",
     "require": {
-        "php": ">7.0.0"
+        "php": "~7.2.0"
     },
     "type": "magento2-module",
     "version": "1.0.0",
