change composer required php version

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "boban-dj/categorywidget",
-    "description": "Emizentech Category List Widget",
+    "description": "Emizentech Category List Widget"
     },
     "type": "magento2-module",
     "version": "1.0.0",
