change composer required php version

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,8 @@
 {
-    "name": "boban-dj/categorywidget",
-    "description": "Emizentech Category List Widget"
+    "name": "emizentech/categorywidget",
+    "description": "Emizentech Category List Widget",
+    "require": {
+        "php": "~7.2"
     },
     "type": "magento2-module",
     "version": "1.0.0",
