--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "boban-dj/categorywidget",
     "description": "Emizentech Category List Widget",
     "require": {
-        "php": "~7.2"
+        "php": "7.2.22"
     },
     "type": "magento2-module",
     "version": "1.0.0",
